src/objects/cp_Session__c.object
<CustomObject>
    <description>Represents a Case Portal session, a session is a unique time the portal application is loaded.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cases__c</fullName>
        <label># Cases</label>
        <summaryFilterItems>
            <field>cp_Session_Event__c.Type__c</field>
            <operation>equals</operation>
            <value>create_case</value>
        </summaryFilterItems>
        <summaryForeignKey>cp_Session_Event__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Session</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Step_1__c</fullName>
        <label># Step 1</label>
        <summaryFilterItems>
            <field>cp_Session_Event__c.Type__c</field>
            <operation>equals</operation>
            <value>load_createcase</value>
        </summaryFilterItems>
        <summaryForeignKey>cp_Session_Event__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>is_Support_Liaison__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Support Liaison</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Viewer_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Viewer Only</label>
        <type>Checkbox</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Case__c</columns>
        <columns>is_Support_Liaison__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>cp__Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>